Modified to correct the z-index

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -96,3 +96,7 @@
 .bg-default {
     background-color: #6f5b96;
 }
+
+.close {
+    color: #c3b8d9;
+}
